# IRTK

./: CMakeLists.txt
applications/: CMakeLists.txt
common++/src/: CMakeLists.txt
config/: IRTKConfig.cmake.in  IRTKInclude.cmake
contrib++/: CMakeLists.txt
contrib++/src/: CMakeLists.txt
geometry++/src/: CMakeLists.txt
image++/: CMakeLists.txt
image++/include/: irtkImage.h
image++/src/: CMakeLists.txt  irtkShapeBasedInterpolateImageFunction.cc
test/: CMakeLists.txt
